Update homepage URL for GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://B00138946.github.io/Web-Portfolio-2026",
+  "homepage": "https://disipepiq.github.io/Web-Portfolio-2026",
   "private": true,
   "version": "0.0.0",
   "type": "module",
